--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <mysql-connector-version>8.0.27</mysql-connector-version>
     <log4j-version>1.2.17</log4j-version>
     <gson-version>2.8.9</gson-version>
+    <hibernate-core-version>5.6.4.Final</hibernate-core-version>
   </properties>
 
   <dependencies>
@@ -54,6 +55,11 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>${gson-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate-core-version}</version>
     </dependency>
 
   </dependencies>
